--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <body>
         <div class="container">
             <div class="inner">
+                <p>Coffee</p>
                 <div class="item">
                     <img src="static/1.jpg" alt="coffee" class="img">
                     <button class="btn" id="btn1">Add</button>
@@ -24,6 +25,16 @@
                 <div class="item">
                     <img src="static/1.jpg" alt="coffee" class="img">
                     <button class="btn" id="btn4">Add</button>
+                </div>
+                <p>Tea</p>
+                <div class="item">
+                    <img src="static/tea.png" alt="coffee" class="img">
+                    <button class="btn" id="tea_1">Add</button>
+                </div>
+                <div class="item">
+                    <img src="static/tea.jpg" alt="coffee" class="img">
+                    <button class="btn" id="tea_2">Add</button>
+                </div>
                 </div>
             </div>
         </div>
